[project]
name = "backman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "crc32c>=2.8",
    "crcmod>=1.7",
    "croniter>=6.2.2",
    "google-cloud-storage>=3.9.0",
    "gspread>=6.2.1",
    "pandas>=3.0.1",
    "python-crontab>=3.3.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.scripts]
backman = "backman.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
